--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "tboot"]
+	path = tboot
+	url = https://github.com/njm18/tboot
+	shallow = true
+	registered = true
